--- a/Primer contacto/index.html
+++ b/Primer contacto/index.html
@@ -7,10 +7,36 @@
     </head>
 
     <body>
-        <div id="app"></div>
+        <div id="app">
+
+            <p>
+                <input type="text" v-model="greeting">
+            </p>
+
+            <p>
+            {{ greeting }} ({{greeting.length}})
+            </p>
+
+        </div>
 
         <script>
-            Vue.createAPP({}).mount('#app');
+
+            Vue.createApp({
+
+                data() {
+                    return {
+                        greeting: 'Hello World'
+                    };
+                },
+
+                mounted() {
+                        setTimeout(() => {
+                            this.greeting = 'Changed';
+                        }, 3000)
+                    }
+
+            }).mount('#app');
+
         </script>
 
     </body>
