--- a/Attribute Binding and Event Handling/index.html
+++ b/Attribute Binding and Event Handling/index.html
@@ -4,15 +4,31 @@
         <meta charset="UTF-8">
         <title>Attribute Binding and Event handling</title>
         <script src="https://unpkg.com/vue@3"></script>
+        <link rel="stylesheet" href="index.css">
     </head>
 
     <body>
         <div id="app">
-
+            <button :class="active ? 'text-red' : 'text-green'" v-on:click="toggle">Click Me</button>
         </div>
 
         <script>
+            Vue.createApp({
 
+                data() {
+                    return {
+                        buttonClasses: 'text-green',
+                        active: false
+                    };
+                },
+
+                methods: {
+                    toggle() {
+                        this.active = !this.active;
+                    }
+                }
+
+            }).mount('#app');
         </script>
 
     </body>
