--- a/Vue_Component_Per_File/index.html
+++ b/Vue_Component_Per_File/index.html
@@ -9,7 +9,7 @@
 
     <body class="h-full grid place-items-center">
         <div id="app">
-            <app-button>Submit</app-button>
+            <app-button type="secondary">Submit</app-button>
         </div>
 
         <script type="module">
